scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/cert-manager/bedrock-access-to-cert-manager-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-cert-manager-webhook
  namespace: "certNamespace"
  labels:
    component: cpfs3
    service: cert-manager
spec:
  podSelector:
    matchLabels:
      app: ibm-cert-manager-webhook
  ingress:
  - {}
