scripts/cpfs/installer_scripts/cp3-networkpolicy/ingress/cert-manager/olm-access-to-cert-manager-catalog.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-operator-lifecyele-manager
  namespace: "certNamespace"
  labels:
    component: cpfs3
    service: cert-manager
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-operator-lifecycle-manager
  policyTypes:
    - Ingress
